--- a/src/scss/layout/_details.scss
+++ b/src/scss/layout/_details.scss
@@ -82,10 +82,12 @@
   &__recommend-friends {
     flex-basis: 28%;
     display: flex;
+    align-items: flex-start;
   }
 
   &__recommend-photo {
     min-width: 0;
+    width: calc(100% / 4);
 
     border-radius: 50%;
     border: 3px solid white;
